--- a/A propos.html
+++ b/A propos.html
@@ -15,7 +15,7 @@
               <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="produit.html">Produits</a></li>
-                <li><a href="apropos.html">A propos</a></li>
+                <li><a href="A propos.html">A propos</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </nav>
